force-app/main/default/objects/TriggerSetting__mdt/TriggerSetting__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Setting</label>
    <pluralLabel>Trigger Settings</pluralLabel>
</CustomObject>