force-app/main/default/objects/TriggerSetting__mdt/fields/RunAfterDelete__c.field-meta.xml
<CustomField>
    <fullName>RunAfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable running after delete</description>
    <label>Run After Delete</label>
    <type>Checkbox</type>
</CustomField>