force-app/main/default/objects/TriggerSetting__mdt/fields/RunAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>RunAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable running after insert</description>
    <label>Run After Insert</label>
    <type>Checkbox</type>
</CustomField>