force-app/main/default/objects/TriggerSetting__mdt/fields/RunAfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>RunAfterUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable running after undelete</description>
    <label>Run After Undelete</label>
    <type>Checkbox</type>
</CustomField>