force-app/main/default/objects/TriggerSetting__mdt/fields/RunAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>RunAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable running after update</description>
    <label>Run After Update</label>
    <type>Checkbox</type>
</CustomField>