force-app/main/default/objects/TriggerSetting__mdt/fields/RunBeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>RunBeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable running before delete</description>
    <label>Run Before Delete</label>
    <type>Checkbox</type>
</CustomField>