force-app/main/default/objects/TriggerSetting__mdt/fields/RunBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>RunBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable running before insert</description>
    <label>Run Before Insert</label>
    <type>Checkbox</type>
</CustomField>