force-app/main/default/objects/TriggerSetting__mdt/fields/RunBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>RunBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable running before update</description>
    <label>Run Before Update</label>
    <type>Checkbox</type>
</CustomField>